base/security/kuard/kuard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  selector:
    app: kuard
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
